# Flowconx

./: .gitignore  README.md  flowconx_realtime_research_plan.md  pyproject.toml  requirements.txt
data/processed/: flowconx_mawi_robustness_background.csv
docs/: dataset_mapping.md  preprocessing_guide.md  usage.md
flowconx/: __init__.py  baselines.py  compass.py  config.py  datasets.py  eval_cli.py  evaluate.py  features.py  losses.py  memory.py  model.py  synthetic.py  train.py
outputs/flowconx_final_labeled_kpi_pass/: history.json  kpi_report.md  metrics.json
scripts/: evaluate_flowconx.py  kpi_report.py  make_synthetic_dataset.py  prepare_5g_traffic_dataset.py  prepare_cesnet_quic22_dataset.py  prepare_flow_csv.py  prepare_mawi_pcap.py  run_baseline.py  run_prototype_compass.py  train_flowconx.py
